--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.android.support:design:24.1.0'
     compile(name:'android-maps-utils-debug', ext:'aar')
+    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.google.code.gson:gson:2.7'
 }
+apply plugin: 'com.google.gms.google-services'
