--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-database:9.2.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.firebase:geofire-android:2.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
