--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,38 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        // Enabling multidex support.
+        multiDexEnabled true
+    }
+    productFlavors {
+        debugModern {
+            minSdkVersion 21
+            applicationId 'porqueno.streetcleanpark'
+            targetSdkVersion 24
+            versionCode 1
+            versionName '1.0'
+        }
+        debugSupport {
+            minSdkVersion 17
+            applicationId 'porqueno.streetcleanpark'
+            targetSdkVersion 24
+            versionCode 1
+            versionName '1.0'
+        }
+        releaseFlavor {
+            minSdkVersion 17
+            applicationId 'porqueno.streetcleanpark'
+            targetSdkVersion 24
+            versionCode 1
+            versionName '1.0'
+        }
     }
     dataBinding {
         enabled = true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -28,10 +53,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.android.support:design:24.2.1'
-    compile(name:'android-maps-utils-debug', ext:'aar')
+
+    // Currently compiling included aar BC released version doesn't have GeoJsonOnFeatureClickListener
+    compile (name:'android-maps-utils-debug', ext:'aar')
+
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-database:9.2.1'
-    compile 'com.google.code.gson:gson:2.7'
     compile 'com.firebase:geofire-android:2.0.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:multidex:1.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
