--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        // Enabling multidex support.
         multiDexEnabled true
     }
     productFlavors {
@@ -41,7 +40,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
